# spark-history-server-rs

./: .gitignore  Cargo.toml  Dockerfile  HDFS_INTEGRATION.md  LOAD_TESTING.md  PERFORMANCE_COMPARISON.md  PERFORMANCE_OPTIMIZATION.md  README.md  README_DEV_SETUP.md  SCRIPT_ORGANIZATION.md  demo.md  docker-compose.hdfs.yml  docker-compose.minio.yml  docker-compose.yml  run_hdfs_tests.sh  run_integration_tests.sh  test_circuit_breaker_performance.toml
.claude/: claude.md
.github/workflows/: ci.yml  rust.yml
config/: local-hdfs.toml  local-s3.toml  settings-with-cache.toml  settings.toml
data/: spark_events.duckdb  spark_events.duckdb.wal
data/test_perf_test_86792/: spark_events.duckdb
docs/: CI_TESTING_SETUP.md  FAILURE_SCENARIOS.md  HDFS_PRODUCTION_DEPLOYMENT.md  LOAD_TESTING.md  LOCAL_DEVELOPMENT.md  TESTING.md  demo.md
examples/: quick_start.rs
openspec/: project.md
scripts/: README.md  cleanup-dev-environment.sh  run-hdfs-tests.sh  run_load_tests.sh  setup-dev-environment.sh  setup-minio-only.sh  test-ci.sh  test-hdfs-args.sh  test-local.sh  test-s3-integration.sh  test-without-docker.sh  upload-test-data.sh  verify-integrations.sh
src/: analytics_api.rs  analytics_api_old.rs  api.rs  circuit_breaker.rs  config.rs  dashboard.rs  dashboard_old.rs  event_processor.rs  hdfs_optimized_reader.rs  hdfs_reader.rs  lib.rs  main.rs  metadata_store.rs  models.rs  persistent_cache.rs  s3_reader.rs  spark_events.rs  storage.rs
src/api/: mod.rs
src/config/: mod.rs
src/storage/: backend_trait.rs  duckdb_store.rs  duckdb_store_backup.rs  event_log.rs  file_reader.rs  hybrid_store.rs  mod.rs
templates/: analytics_dashboard.html  base.html  cluster.html  enhanced_simple.html  modern_base.html  modern_cluster.html  modern_optimize.html  optimize.html  platform_engineering_optimize.html  resources_view.html  simple_cluster.html  simple_optimize.html
test-data/spark-events/: sample_event_log.json
test-data/spark-events/eventlog_v2_spark-110be3a8424d4a2789cb88134418217b/: events_1_spark-110be3a8424d4a2789cb88134418217b
test-data/spark-events/eventlog_v2_spark-bcec39f6201b42b9925124595baad260/: events_1_spark-bcec39f6201b42b9925124595baad260
test-data/spark-events/eventlog_v2_spark-cc4d115f011443d787f03a71a476a745/: events_1_spark-cc4d115f011443d787f03a71a476a745
tests/: analytical_query_performance.rs  analytics_api_test.rs  api_load_test.rs  argument_based_reader_test.rs  batch_writer_debug_test.rs  comprehensive_benchmark.rs  comprehensive_hdfs_test.rs  end_to_end_test.rs  failure_scenarios_test.rs  hdfs_integration_test.rs  hdfs_kerberos_test.rs  hdfs_test_config.rs  incremental_scan_test.rs  integration_resilience_test.rs  integration_test.rs  kerberos_advanced_test.rs  large_scale_test.rs  load_test_utils.rs  performance_benchmarks_test.rs  performance_monitor.rs  performance_no_circuit_breaker_test.rs  quick_query_demo.rs  real_hdfs_integration_test.rs  s3_integration_test.rs  scalability_test.rs  test_config.rs  ui_data_validation_test.rs  ui_working_endpoints_test.rs  write_performance_test.rs
