[package]
name = "spark-history-server"
version = "0.0.1"
edition = "2021"
authors = ["Zemin Piao <pzm6391@gmail.com>"]
description = "A high-performance read-only Spark History Server API implementation in Rust"

[dependencies]
# Web framework
axum = "0.7"
tokio = { version = "1.0", features = ["full"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4.38", features = ["serde"] }

# HTTP client for testing
reqwest = { version = "0.11", features = ["json"] }

# File system and compression
flate2 = "1.0"
zip = "0.6"

# Hadoop/HDFS integration
hdfs-native = "0.10"

# AWS S3 integration
aws-sdk-s3 = "1.0"
aws-config = "1.0"
aws-types = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Configuration
config = "0.14"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# CLI
clap = { version = "4.0", features = ["derive"] }

# TOML parsing for config
toml = "0.8"

# Async trait support
async-trait = "0.1"

# Analytical database
duckdb = { version = "1.1.3", features = ["bundled"] }

# Web dashboard templates
askama = { version = "0.12", features = ["with-axum"] }
askama_axum = "0.4"
axum-extra = { version = "0.9", features = ["typed-header"] }

[dev-dependencies]
# Testing dependencies
tokio-test = "0.4"
tempfile = "3.8"

# Load testing dependencies
rand = "0.8"
sysinfo = "0.30"
criterion = { version = "0.5", features = ["html_reports"] }
rayon = "1.8"

[features]
default = []
performance-tests = []

[[bin]]
name = "spark-history-server"
path = "src/main.rs"
